recursion.hanoi.lessons.recursion.hanoi.SplitHanoi1.scala.error
SplitHanoi1:22: error: not found: value hanoirpair
    hanoirpair(height-2,src,dst1,other)
    ^SplitHanoi1:25: error: not found: value splitHaloi
    splitHaloi(height-1,other,src,dst2,dst1)
    ^